compiler/actonc/test/syntaxerrors/err20.act
# Invalid decorator syntax
@
def decorated():
    pass